# FA_cv6

backend/: pyproject.toml  readme.MD
backend/source/: main.py
frontend/: README.md  package.json
frontend/src/: App.tsx
pwd_cracker/: pyproject.toml  readme.MD
pwd_cracker/source/: cracker.py
