[tool.poetry]
name = "pwd_crack_test"
version = "0.0.1"
description = ""
authors = ["skrcka <krcek.adam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
aiohttp-cors = "^0.7.0"

[tool.pytest.ini_options]
pythonpath = [
  "source"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
