[tool.poetry]
name = "pwd_cracker"
version = "0.0.1"
description = ""
authors = ["skrcka <krcek.adam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"
pytest-asyncio = "^0.21.1"

[tool.pytest.ini_options]
pythonpath = [
  "source"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
